--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="Styles/main.css" />
 	</head>
 	<body>     
-<ul>
-  <li-a class="active">About Me</li-a>
-</ul>
+		<ul>
+ 			<li-a class="active">About Me</li-a>
+		</ul>
+        <h1>
+            Stuff
+        </h1>
+        <p>
+            Things
+        </p>
 	</body>
 </html>
