--- a/Index.html
+++ b/Index.html
@@ -6,11 +6,11 @@
 		<link rel="stylesheet" type="text/css" href="Styles/main.css" />
 	</head>
 	<body>    
-        
+        <a href="contact.html">contact</a>
         <ul>
-  			<li><a>Home</a></li>
-  			<li><a href="#contact">Contact</a></li>
-  			<li><a href="#about">About</a></li>
+  			<li><a href="Index.html">Home</a></li>
+  			<li><a href="projects.html">Projects</a></li>
+            <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
 		</ul>
 
         <div class="container">
@@ -18,9 +18,6 @@
   			<div class="centered">About Me</div>
 		</div>
         
-        <h1>
-            Stuff
-        </h1>
         <p>
             Things
         </p>
