links and other thing
blah blah blah

--- a/contact.html
+++ b/contact.html
@@ -6,16 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="Styles/main.css" />
 	</head>
 	<body>    
-        <a href="contact.html">contact</a>
         <ul>
-  			<li><a href="">Home</a></li>
-  			<li><a href="#projects">Projects</a></li>
-            <li style="float:right"><a class="active" href="#contact">Contact</a></li>
+  			<li><a href="index.html">Home</a></li>
+  			<li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
 		</ul>
         
-        <p>
-            Things
-        </p>
+        <h2> email: <br> dominicbertocchini@gmail.com <br> phone: <br> (650) - 970 - 9727 </h2>
         
 	</body>
 </html>
