--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="Styles/main.css" />
 	</head>
 	<body>    
-        <a href="contact.html">contact</a>
         <ul>
-  			<li><a href="Index.html">Home</a></li>
+  			<li><a href="index.html">Home</a></li>
   			<li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
 		</ul>
 
