--- a/resume.html
+++ b/resume.html
@@ -12,10 +12,6 @@
             <li><a href="resume.html">Resume</a></li>
             <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
 		</ul>
-        
-        <h2>
-            Projects
-        </h2>
-        
+        <h2><a href="https://docs.google.com/document/d/1w0xmkHJvML9U5f2g9CchqKzeDnohkf6Sbs81XLf_kx8/edit?usp=sharing">Resume</a></h2>
 	</body>
 </html>
