--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
 		</ul>
         
-        <h2> email: <br> dominicbertocchini@gmail.com <br> phone: <br> (650) - 970 - 9727 </h2>
+        <h2> email: <br> dominicbertocchini@gmail.com </h2>
         
 	</body>
 </html>
